@@ -15,6 +15,7 @@
   handle shared libs in tpackages (USC)
   qstat's -1 option can now be used with -f for easier parsing (USC)
   fix broken TM on OSX (USC)
+  add "version" and "configversion" RM requests (USC)
 
 2.1.0p0
 
